--- a/apps/open/public/index.html
+++ b/apps/open/public/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Metabase</title>
+    <title>Light Open Analytics</title>
     <style>
-      .h-screen {
-        height: 100vh;
-      }
-      .w-full {
+      iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+        border: none;
       }
     </style>
   </head>
   <body>
     <iframe
-      class="h-screen w-full"
       src="https://lightdotso.metabaseapp.com/public/dashboard/36bd72c3-15b5-43f0-9fe9-0c4d58d258d9"
     ></iframe>
   </body>
