chore: ini debug

--- a/apps/open/public/index.html
+++ b/apps/open/public/index.html
@@ -12,6 +12,7 @@
         border: none;
       }
     </style>
+    <script async src="https://data.light.so/p.js"></script>
   </head>
   <body>
     <iframe
